--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Italian poetry -- 14th century -- Translations into English'
 - !lcc 'PQ'
 - !lcsh 'Petrarca, Francesco, 1304-1374'
+- GITenberg
 title: The Sonnets, Triumphs, and Other Poems of Petrarch
 url: http://www.gutenberg.org/ebooks/17650
